undo of the second try to fix the horizontal scroll issue on mobile

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -8,7 +8,7 @@
 html, body{
     margin: 0;
     height: 100vh;
-    width: 100%;
+    width: 100vw;
     font-family:"roboto", sans-serif;
     max-width: 100%;
     scroll-behavior: smooth;
